update files lists.
git ignorance & MANIFEST.SKIP for files produced;
ship the version lookup check, but not the .pm file editor
  because Makefile.PL runs (including version_pair) for the install;
MANIFEST.SKIP: also forget CVS, fix patterns

(nb. t/error-compat.t t/tlib/ManyThrowsTestCase.pm
 are still excluded, fix later)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Perl build & dist
 Makefile
+Makefile.old
+Test-Unit-*/
 Test-Unit-*.tar
 Test-Unit-*.tar.gz
 blib
 pm_to_blib
+MANIFEST.bak
 
 # emacs
 *~
